ge gaat het ni geloven, maar ik heb .toList gebruikt